--- a/rebar.config
+++ b/rebar.config
@@ -9,7 +9,8 @@
 ]}.
 
 {deps, [
-    {rebar3_gpb_plugin, "2.12.0"}
+    {gpb,{git,"https://github.com/tomas-abrahamsson/gpb.git",{tag,"4.21.5"}}},
+    {rebar3_gpb_plugin,{git,"https://github.com/lrascao/rebar3_gpb_plugin.git",{tag,"2.23.6"}}}
 ]}.
 
 {cover_enabled, true}.
