--- a/rebar.config
+++ b/rebar.config
@@ -9,8 +9,7 @@
 ]}.
 
 {deps, [
-    {gpb,{git,"https://github.com/tomas-abrahamsson/gpb.git",{tag,"4.21.5"}}},
-    {rebar3_gpb_plugin,{git,"https://github.com/lrascao/rebar3_gpb_plugin.git",{tag,"2.23.6"}}}
+    rebar3_gpb_plugin
 ]}.
 
 {cover_enabled, true}.
