--- a/example/rebar.config
+++ b/example/rebar.config
@@ -6,7 +6,7 @@
 ]}.
 
 {project_plugins, [
-    {gpb_rpc_plugin, {git, "https://github.com/si229/gpb_rpc_plugin.git", {branch, "main"}}}
+    {rebar3_gpb_rpc_plugin, {git, "https://github.com/si229/gpb_rpc_plugin.git", {branch, "main"}}}
 ]}.
 
 {gpb_opts, [
