--- a/example/rebar.config
+++ b/example/rebar.config
@@ -18,7 +18,7 @@
 %%    {nif, true},
     {verify, always},
     {o_erl, "src/proto"},
-    {o_hrl, "include/proto"},
+    {o_hrl, "include/"},
     {module_name_suffix, "_pb"}
 ]}.
 
@@ -27,7 +27,7 @@
     {msg_prefix, "msg_"},
     {mod_prefix, "mod_"},
     {o_erl, "src/msg"},
-    {o_hrl, "include/msg"},
+    {o_hrl, "include/"},
     {erl_tpl, "templates/gpb_rpc/gpb_rpc.erl.tpl"},
     {hrl_tpl, "templates/gpb_rpc/gpb_rpc.hrl.tpl"},
     {router_erl_tpl, "templates/gpb_rpc/gpb_rpc_router.erl.tpl"},
